--- a/Baseline.ipynb
+++ b/Baseline.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6e4d57af",
+   "id": "01fa0131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0f4c5c6e",
+   "execution_count": 151,
+   "id": "32c5f64d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,15 +64,14 @@
     "\n",
     "n_seed = 3\n",
     "n_fold = 3\n",
-    "prediction_threshold = 0.1\n",
-    "\n",
+    "prediction_threshold = 0.2\n",
     "retrain_after_valid = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d80cfaaf",
+   "id": "a2e1037e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d5dc5206",
+   "id": "2aa8d28b",
    "metadata": {},
    "outputs": [
     {
@@ -99,8 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.5 s, sys: 576 ms, total: 7.08 s\n",
-      "Wall time: 7.07 s\n"
+      "CPU times: user 6.58 s, sys: 1.17 s, total: 7.75 s\n",
+      "Wall time: 7.75 s\n"
      ]
     }
    ],
@@ -120,8 +119,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53f871ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "payments = payments.sort_values(by='day_dt', ascending = False).reset_index(drop = True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "8307fa6b",
+   "id": "5b72babd",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -129,25 +138,309 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "cd02f19e",
+   "execution_count": 197,
+   "id": "e68e424b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>client_id</th>\n",
+       "      <th>agrmnt_start_dt</th>\n",
+       "      <th>agrmnt_close_dt</th>\n",
+       "      <th>crncy_cd</th>\n",
+       "      <th>agrmnt_rate_active</th>\n",
+       "      <th>agrmnt_rate_passive</th>\n",
+       "      <th>agrmnt_sum_rur</th>\n",
+       "      <th>prod_type_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>2010-08-12</td>\n",
+       "      <td>2014-10-30</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Cash on demand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>2013-02-15</td>\n",
+       "      <td>2013-08-16</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Cash on demand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>2013-08-16</td>\n",
+       "      <td>2014-02-14</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Cash on demand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>2015-07-12</td>\n",
+       "      <td>2015-07-12</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Cash on demand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>2015-07-12</td>\n",
+       "      <td>2015-07-12</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Cash on demand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109011</th>\n",
+       "      <td>-8242641659611256965</td>\n",
+       "      <td>2011-08-10</td>\n",
+       "      <td>2011-08-10</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>POST OFFICE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109012</th>\n",
+       "      <td>-8242641659611256965</td>\n",
+       "      <td>2011-08-10</td>\n",
+       "      <td>2018-07-03</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>13089.0</td>\n",
+       "      <td>POST OFFICE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109013</th>\n",
+       "      <td>-8242641659611256965</td>\n",
+       "      <td>2011-08-10</td>\n",
+       "      <td>2011-08-10</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>POST OFFICE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109014</th>\n",
+       "      <td>-8242641659611256965</td>\n",
+       "      <td>2011-08-23</td>\n",
+       "      <td>2012-09-18</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.00</td>\n",
+       "      <td>5403.0</td>\n",
+       "      <td>POST OFFICE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109015</th>\n",
+       "      <td>-4636514022054340174</td>\n",
+       "      <td>2014-06-09</td>\n",
+       "      <td>2017-07-31</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>18.75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3299986.0</td>\n",
+       "      <td>Mortgage plus</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>109016 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  client_id agrmnt_start_dt agrmnt_close_dt  crncy_cd  \\\n",
+       "0       7513301859607023584      2010-08-12      2014-10-30     810.0   \n",
+       "1       7513301859607023584      2013-02-15      2013-08-16     810.0   \n",
+       "2       7513301859607023584      2013-08-16      2014-02-14     810.0   \n",
+       "3       7513301859607023584      2015-07-12      2015-07-12     810.0   \n",
+       "4       7513301859607023584      2015-07-12      2015-07-12     810.0   \n",
+       "...                     ...             ...             ...       ...   \n",
+       "109011 -8242641659611256965      2011-08-10      2011-08-10     810.0   \n",
+       "109012 -8242641659611256965      2011-08-10      2018-07-03     810.0   \n",
+       "109013 -8242641659611256965      2011-08-10      2011-08-10     810.0   \n",
+       "109014 -8242641659611256965      2011-08-23      2012-09-18     810.0   \n",
+       "109015 -4636514022054340174      2014-06-09      2017-07-31     810.0   \n",
+       "\n",
+       "        agrmnt_rate_active  agrmnt_rate_passive  agrmnt_sum_rur  \\\n",
+       "0                      NaN                  NaN             0.0   \n",
+       "1                      NaN                  NaN             0.0   \n",
+       "2                      NaN                  NaN             0.0   \n",
+       "3                      NaN                  NaN             0.0   \n",
+       "4                      NaN                  NaN             0.0   \n",
+       "...                    ...                  ...             ...   \n",
+       "109011                 NaN                  NaN             0.0   \n",
+       "109012                 NaN                 3.25         13089.0   \n",
+       "109013                 NaN                  NaN             0.0   \n",
+       "109014                 NaN                 7.00          5403.0   \n",
+       "109015               18.75                  NaN       3299986.0   \n",
+       "\n",
+       "        prod_type_name  \n",
+       "0       Cash on demand  \n",
+       "1       Cash on demand  \n",
+       "2       Cash on demand  \n",
+       "3       Cash on demand  \n",
+       "4       Cash on demand  \n",
+       "...                ...  \n",
+       "109011     POST OFFICE  \n",
+       "109012     POST OFFICE  \n",
+       "109013     POST OFFICE  \n",
+       "109014     POST OFFICE  \n",
+       "109015   Mortgage plus  \n",
+       "\n",
+       "[109016 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "3b3d432f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "client_id\n",
+       "-9221941791080978530    0.000000e+00\n",
+       "-9220369594510368140    6.634224e+07\n",
+       "-9220236243053692422    0.000000e+00\n",
+       "-9220233431709087652    9.242713e+04\n",
+       "-9219699286371310531    0.000000e+00\n",
+       "                            ...     \n",
+       " 9218801691173598782    2.723500e+03\n",
+       " 9219024469308275500    0.000000e+00\n",
+       " 9219968212912398941    0.000000e+00\n",
+       " 9220335314469087849    9.004667e+03\n",
+       " 9223107459698100059    0.000000e+00\n",
+       "Name: agrmnt_sum_rur, Length: 18652, dtype: float64"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deals.groupby('client_id')['agrmnt_sum_rur'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "04fb0df4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_features(data):\n",
+    "def most_common(x, default='unknown'):\n",
+    "    try:\n",
+    "        return x.value_counts().index[0] \n",
+    "    except: \n",
+    "        return default\n",
+    "\n",
+    "\n",
+    "def create_features_transactions(data):\n",
     "    \n",
     "    data = data.copy()\n",
+    "    \n",
     "    # transaction features\n",
     "    data['cards_count'] = data['client_id'].map(transactions.groupby('client_id')['card_id'].count()).fillna(0)\n",
     "    data['total_transaction_amount'] = data['client_id'].map(transactions.groupby('client_id')['tran_amt_rur'].sum()).fillna(0) # add monthly, daily, etc\n",
+    "    data['mean_transaction_amount'] = data['client_id'].map(transactions.groupby('client_id')['tran_amt_rur'].mean()).fillna(0) # add monthly, daily, etc\n",
+    "    data['std_transaction_amount'] = data['client_id'].map(transactions.groupby('client_id')['tran_amt_rur'].std()).fillna(0) # add monthly, daily, etc\n",
+    "    \n",
+    "    data['most_common_mcc_cd'] = data['client_id'].map(transactions.groupby('client_id')['mcc_cd'].agg(lambda x:most_common(x))).fillna(-1)\n",
+    "    data['most_common_txn_comment_1'] = data['client_id'].map(transactions.groupby('client_id')['txn_comment_1'].agg(lambda x:most_common(x, 'unknown'))).fillna('unknown')\n",
+    "    data['most_common_txn_city'] = data['client_id'].map(transactions.groupby('client_id')['txn_city'].agg(lambda x: most_common(x, 'unknown'))).fillna('unknown')\n",
+    "    data['most_common_txn_country'] = data['client_id'].map(transactions.groupby('client_id')['txn_country'].agg(lambda x:most_common(x, 'unknown'))).fillna('unknown')\n",
+    "    \n",
+    "    data['number_of_transaction_countries'] = data['client_id'].map(transactions.groupby('client_id')['txn_city'].agg(lambda x:x.value_counts().shape[0]))\n",
+    "    data['number_of_transaction_cities'] = data['client_id'].map(transactions.groupby('client_id')['txn_country'].agg(lambda x:x.value_counts().shape[0]))\n",
+    "    \n",
+    "    return data\n",
+    "\n",
+    "def create_feautures_payments(data):\n",
+    "    data = data.copy()\n",
+    "    \n",
+    "    # payments \n",
+    "    data['last_known_salary'] = data['client_id'].map(payments.groupby('client_id').apply(lambda x: x['sum_rur'].iloc[0])).fillna(-1)\n",
+    "    data['total_recieved_salary'] = data['client_id'].map(payments.groupby('client_id').apply(lambda x: x['sum_rur'].sum())).fillna(-1)\n",
+    "    \n",
+    "    return data\n",
+    "\n",
+    "def create_features_deals(data):\n",
+    "    data = data.copy()\n",
+    "    \n",
+    "    data['number_of_deals'] = data['client_id'].map(deals.groupby('client_id')['crncy_cd'].count()).fillna(0)\n",
+    "    data['mean_deal_sum'] = data['client_id'].map(deals.groupby('client_id')['agrmnt_sum_rur'].mean()).fillna(0)\n",
     "    \n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d628dec8",
+   "execution_count": 200,
+   "id": "f4f41918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +451,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "34390876",
+   "execution_count": 201,
+   "id": "7ec45aaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 38 s, sys: 196 ms, total: 38.2 s\n",
+      "Wall time: 38.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# create features\n",
+    "\n",
+    "data = create_features_transactions(data)\n",
+    "data = create_feautures_payments(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "879628ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = create_features_deals(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "bf6b5886",
    "metadata": {},
    "outputs": [],
    "source": [
     "# data encode\n",
     "\n",
     "le = LabelEncoder()\n",
-    "fill_cols = ['gender', 'citizenship', 'education', 'job_type']\n",
+    "fill_cols = ['gender', 'citizenship', 'education', 'job_type', 'most_common_txn_comment_1', 'most_common_txn_city', 'most_common_txn_country']\n",
     "for col in fill_cols:\n",
     "    data[col] = le.fit_transform(data[col].astype(str))\n",
     "    joblib.dump(le, OUTPUT_PATH / 'preprocessors' / f'{col}.pkl')"
@@ -174,20 +500,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "46663a05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create features\n",
-    "\n",
-    "data = create_features(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "304bbc73",
+   "execution_count": 214,
+   "id": "3b7b4e1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f1bdb16",
+   "id": "a3e970ff",
    "metadata": {},
    "source": [
     "## Train"
@@ -205,8 +519,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d95970d1",
+   "execution_count": 215,
+   "id": "946efecc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,8 +540,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1bb1a954",
+   "execution_count": 216,
+   "id": "3b58eae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,8 +567,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "6d5ae855",
+   "execution_count": 217,
+   "id": "2e32bdc6",
    "metadata": {},
    "outputs": [
     {
@@ -324,8 +638,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b950c5ff",
+   "execution_count": 218,
+   "id": "c1241f23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,8 +655,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "b562fb8a",
+   "execution_count": 219,
+   "id": "5511266f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,8 +669,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b0a5ccf6",
+   "execution_count": 220,
+   "id": "03fca335",
    "metadata": {},
    "outputs": [
     {
@@ -396,17 +710,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "ed30f8df",
+   "execution_count": 221,
+   "id": "f6669fe9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Public ANIC 5276.413675690766 Private ANIC 5618.704322495118\n",
-      "ANIC 5504.607440227\n",
-      "Accuracy score: 0.783235649827891\n"
+      "Public ANIC 5365.358979905113 Private ANIC 5653.409841613172\n",
+      "ANIC 5557.392887710485\n",
+      "Accuracy score: 0.8324495301888548\n"
      ]
     }
    ],
@@ -419,8 +733,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "0ce6f5ca",
+   "execution_count": 211,
+   "id": "2947797d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5172af94",
+   "id": "da160a13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b595acff",
+   "id": "b4fdd17c",
    "metadata": {},
    "outputs": [],
    "source": [
