added aum features

--- a/Baseline-kovalev.ipynb
+++ b/Baseline-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "997bcda2",
+   "id": "be315da1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8455ca9a",
+   "id": "fdbd5a22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1c735ece",
+   "id": "93be94d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "db884607",
+   "id": "6f01e20d",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3d767817",
+   "id": "b71d91ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6b7f7c",
+   "id": "e5243c33",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "8f896a7c",
+   "id": "c1c834fb",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "07295a96",
+   "id": "3a138e71",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b634ca93",
+   "id": "a60fe73d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d9ffd39b",
+   "id": "c8adb55e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
     "\n",
     "#     data['total_transaction_amount'] = data['client_id'].map(transactions.groupby('client_id')['tran_amt_rur'].sum()).fillna(0) # add monthly, daily, etc\n",
     "    data['mean_transaction_amt'] = data['client_id'].map(transactions.groupby('client_id')['tran_amt_rur'].mean()).fillna(-1) # add monthly, daily, etc\n",
-    "#     data['std_transaction_amount'] = data['client_id'].map(transactions.groupby('client_id')['tran_amt_rur'].std()).fillna(0) # add monthly, daily, etc\n",
+    "    data['std_transaction_amount'] = data['client_id'].map(transactions.groupby('client_id')['tran_amt_rur'].std()).fillna(-1) # add monthly, daily, etc\n",
     "    \n",
     "    data['total_mcc_cd'] = get_feature_total(transactions, 'mcc_cd')\n",
     "    data['total_share_mcc_cd'] = (data['total_mcc_cd'] / data['total_transactions']).fillna(0)\n",
@@ -458,6 +458,19 @@
     "    \n",
     "    return data\n",
     "\n",
+    "\n",
+    "def create_features_aum(data):\n",
+    "    data = data.copy()\n",
+    "    \n",
+    "    data['total_aum'] = data['client_id'].map(assets_under_management.groupby('client_id').size()).fillna(0)\n",
+    "    \n",
+    "    data['total_product_code'] = get_feature_total(assets_under_management, 'product_code')\n",
+    "    data['most_common_product_code'] = get_feature_most_common(assets_under_management, 'product_code', '<unknown>').value_counts()\n",
+    "    \n",
+    "    data['mean_balance_rur_amt'] = data['client_id'].map(assets_under_management.groupby('client_id')['balance_rur_amt'].mean()).fillna(-1)\n",
+    "    data['std_balance_rur_amt'] = data['client_id'].map(assets_under_management.groupby('client_id')['balance_rur_amt'].mean()).fillna(-1)\n",
+    "    \n",
+    "\n",
     "def create_feautures_payments(data):\n",
     "    data = data.copy()\n",
     "    \n",
@@ -479,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "ed25c863",
+   "id": "c0e611f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "83ece041",
+   "id": "f7b67402",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "cfbcb01c",
+   "id": "811e57ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "b2835ee0",
+   "id": "05b9c3c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "861b869b",
+   "id": "ea38a01e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac8e5ed3",
+   "id": "56366ab8",
    "metadata": {},
    "source": [
     "## Train"
@@ -559,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "3283a9c1",
+   "id": "0502403c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "2e47b30a",
+   "id": "a06f49ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "07b5ff07",
+   "id": "0280195a",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "baf0bf18",
+   "id": "fc385f36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "d0d8b32c",
+   "id": "d449a215",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "40a631f1",
+   "id": "9bfb2146",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "3022e11c",
+   "id": "72218bd5",
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "3f618893",
+   "id": "ea793bf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e5096603",
+   "id": "d1b81402",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "48b02e8e",
+   "id": "098076f5",
    "metadata": {},
    "outputs": [],
    "source": [
