added aum features - quick fix

--- a/Baseline-kovalev.ipynb
+++ b/Baseline-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "be315da1",
+   "id": "81a8e61c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fdbd5a22",
+   "id": "20aca53e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "93be94d9",
+   "id": "ffac878a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6f01e20d",
+   "id": "94939046",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b71d91ea",
+   "id": "deeeacfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5243c33",
+   "id": "01aaeade",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "c1c834fb",
+   "id": "463df848",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "3a138e71",
+   "id": "7def18ef",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a60fe73d",
+   "id": "90590cc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c8adb55e",
+   "id": "f3bae83a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,8 +470,10 @@
     "    data['mean_balance_rur_amt'] = data['client_id'].map(assets_under_management.groupby('client_id')['balance_rur_amt'].mean()).fillna(-1)\n",
     "    data['std_balance_rur_amt'] = data['client_id'].map(assets_under_management.groupby('client_id')['balance_rur_amt'].mean()).fillna(-1)\n",
     "    \n",
+    "    return aum\n",
+    "    \n",
     "\n",
-    "def create_feautures_payments(data):\n",
+    "def create_features_payments(data):\n",
     "    data = data.copy()\n",
     "    \n",
     "    # payments \n",
@@ -492,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "c0e611f4",
+   "id": "2e0133ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "f7b67402",
+   "id": "36474d0a",
    "metadata": {},
    "outputs": [
     {
@@ -521,13 +523,14 @@
     "# create features\n",
     "\n",
     "data = create_features_transactions(data)\n",
-    "data = create_feautures_payments(data)"
+    "data = create_features_payments(data)\n",
+    "data = create_features_aum(data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "811e57ce",
+   "id": "25549d90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "05b9c3c2",
+   "id": "47a5aa08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "ea38a01e",
+   "id": "f2d45f42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56366ab8",
+   "id": "576ff36e",
    "metadata": {},
    "source": [
     "## Train"
@@ -572,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "0502403c",
+   "id": "50da4014",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "a06f49ac",
+   "id": "c9475226",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "0280195a",
+   "id": "820a5091",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "fc385f36",
+   "id": "7aeb04ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "d449a215",
+   "id": "4f4ea55b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "9bfb2146",
+   "id": "571aa026",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "72218bd5",
+   "id": "f1301037",
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "ea793bf9",
+   "id": "f1a7d1d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d1b81402",
+   "id": "c7a18275",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "098076f5",
+   "id": "96725f98",
    "metadata": {},
    "outputs": [],
    "source": [
