--- a/Baseline-kovalev.ipynb
+++ b/Baseline-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "81a8e61c",
+   "id": "638c562a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20aca53e",
+   "id": "8a4bfaef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ffac878a",
+   "id": "96578765",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "94939046",
+   "id": "d5ddeb08",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "deeeacfe",
+   "id": "e86300d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01aaeade",
+   "id": "d0f902f6",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "463df848",
+   "id": "b7c2184d",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "7def18ef",
+   "id": "a36e8718",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90590cc1",
+   "id": "cd3e3321",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f3bae83a",
+   "id": "4015d4aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
     "    data['mean_balance_rur_amt'] = data['client_id'].map(assets_under_management.groupby('client_id')['balance_rur_amt'].mean()).fillna(-1)\n",
     "    data['std_balance_rur_amt'] = data['client_id'].map(assets_under_management.groupby('client_id')['balance_rur_amt'].mean()).fillna(-1)\n",
     "    \n",
-    "    return aum\n",
+    "    return data\n",
     "    \n",
     "\n",
     "def create_features_payments(data):\n",
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "2e0133ab",
+   "id": "772d316a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "36474d0a",
+   "id": "b79f777b",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "25549d90",
+   "id": "33cfcecc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "47a5aa08",
+   "id": "fec8e27d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "f2d45f42",
+   "id": "849224af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "576ff36e",
+   "id": "93dfa941",
    "metadata": {},
    "source": [
     "## Train"
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "50da4014",
+   "id": "b54f4022",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "c9475226",
+   "id": "82efc986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "820a5091",
+   "id": "74469aa6",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "7aeb04ac",
+   "id": "14e11ad9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "4f4ea55b",
+   "id": "fc7796b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "571aa026",
+   "id": "d2bc52dd",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "f1301037",
+   "id": "a3ed438f",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "f1a7d1d8",
+   "id": "b83c17e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c7a18275",
+   "id": "6ce359e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "96725f98",
+   "id": "e4916cc0",
    "metadata": {},
    "outputs": [],
    "source": [
