--- a/EDA-FE-kovalev.ipynb
+++ b/EDA-FE-kovalev.ipynb
@@ -1811,6 +1811,271 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>client_id</th>\n",
+       "      <th>crncy_cd</th>\n",
+       "      <th>eop_bal_sum_rur</th>\n",
+       "      <th>min_bal_sum_rur</th>\n",
+       "      <th>max_bal_sum_rur</th>\n",
+       "      <th>avg_bal_sum_rur</th>\n",
+       "      <th>month_end_dt</th>\n",
+       "      <th>prod_cat_name</th>\n",
+       "      <th>prod_group_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018-09-30</td>\n",
+       "      <td>CURRENT ACCOUNTS</td>\n",
+       "      <td>Cash on demand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018-09-30</td>\n",
+       "      <td>CURRENT ACCOUNTS</td>\n",
+       "      <td>Cash on demand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018-09-30</td>\n",
+       "      <td>CURRENT ACCOUNTS</td>\n",
+       "      <td>Cash on demand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018-09-30</td>\n",
+       "      <td>CURRENT ACCOUNTS</td>\n",
+       "      <td>Cash on demand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7513301859607023584</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018-09-30</td>\n",
+       "      <td>CURRENT ACCOUNTS</td>\n",
+       "      <td>Cash on demand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1194679</th>\n",
+       "      <td>8771660346321577665</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-04-30</td>\n",
+       "      <td>CAR LOANS</td>\n",
+       "      <td>Car loans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1194680</th>\n",
+       "      <td>8771660346321577665</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-05-31</td>\n",
+       "      <td>CAR LOANS</td>\n",
+       "      <td>Car loans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1194681</th>\n",
+       "      <td>8771660346321577665</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-06-30</td>\n",
+       "      <td>CAR LOANS</td>\n",
+       "      <td>Car loans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1194682</th>\n",
+       "      <td>8771660346321577665</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-07-31</td>\n",
+       "      <td>CAR LOANS</td>\n",
+       "      <td>Car loans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1194683</th>\n",
+       "      <td>8771660346321577665</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-08-31</td>\n",
+       "      <td>CAR LOANS</td>\n",
+       "      <td>Car loans</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1194684 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   client_id  crncy_cd  eop_bal_sum_rur  min_bal_sum_rur  \\\n",
+       "0        7513301859607023584     810.0              0.0              0.0   \n",
+       "1        7513301859607023584     810.0              0.0              0.0   \n",
+       "2        7513301859607023584     810.0              0.0              0.0   \n",
+       "3        7513301859607023584     810.0              0.0              0.0   \n",
+       "4        7513301859607023584     810.0              0.0              0.0   \n",
+       "...                      ...       ...              ...              ...   \n",
+       "1194679  8771660346321577665     810.0              0.0              0.0   \n",
+       "1194680  8771660346321577665     810.0              0.0              0.0   \n",
+       "1194681  8771660346321577665     810.0              0.0              0.0   \n",
+       "1194682  8771660346321577665     810.0              0.0              0.0   \n",
+       "1194683  8771660346321577665     810.0              0.0              0.0   \n",
+       "\n",
+       "         max_bal_sum_rur  avg_bal_sum_rur month_end_dt     prod_cat_name  \\\n",
+       "0                    0.0              0.0   2018-09-30  CURRENT ACCOUNTS   \n",
+       "1                    0.0              0.0   2018-09-30  CURRENT ACCOUNTS   \n",
+       "2                    0.0              0.0   2018-09-30  CURRENT ACCOUNTS   \n",
+       "3                    0.0              0.0   2018-09-30  CURRENT ACCOUNTS   \n",
+       "4                    0.0              0.0   2018-09-30  CURRENT ACCOUNTS   \n",
+       "...                  ...              ...          ...               ...   \n",
+       "1194679              0.0              0.0   2019-04-30         CAR LOANS   \n",
+       "1194680              0.0              0.0   2019-05-31         CAR LOANS   \n",
+       "1194681              0.0              0.0   2019-06-30         CAR LOANS   \n",
+       "1194682              0.0              0.0   2019-07-31         CAR LOANS   \n",
+       "1194683              0.0              0.0   2019-08-31         CAR LOANS   \n",
+       "\n",
+       "        prod_group_name  \n",
+       "0        Cash on demand  \n",
+       "1        Cash on demand  \n",
+       "2        Cash on demand  \n",
+       "3        Cash on demand  \n",
+       "4        Cash on demand  \n",
+       "...                 ...  \n",
+       "1194679       Car loans  \n",
+       "1194680       Car loans  \n",
+       "1194681       Car loans  \n",
+       "1194682       Car loans  \n",
+       "1194683       Car loans  \n",
+       "\n",
+       "[1194684 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 3343956271377825812    10670\n",
+       " 3841649174837982870     5865\n",
+       " 3097202502652151275     5493\n",
+       " 280369242567491063      5238\n",
+       "-8357225692204604992     4352\n",
+       "                        ...  \n",
+       " 3136503123480904931        2\n",
+       " 5325453404912495978        1\n",
+       " 8795681619024426036        1\n",
+       " 4947730604314534183        1\n",
+       "-3310635477253838557        1\n",
+       "Name: client_id, Length: 18625, dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balance['client_id'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
