added balance features

--- a/Baseline-kovalev.ipynb
+++ b/Baseline-kovalev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "638c562a",
+   "id": "e5f8dee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8a4bfaef",
+   "id": "1514e810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "96578765",
+   "id": "e8b4fb49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d5ddeb08",
+   "id": "12ab0ba8",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e86300d6",
+   "id": "a8d4613a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f902f6",
+   "id": "ad70390f",
    "metadata": {},
    "source": [
     "## Data prep"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "b7c2184d",
+   "id": "c1740ecd",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "a36e8718",
+   "id": "f46cc407",
    "metadata": {},
    "outputs": [
     {
@@ -389,20 +389,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd3e3321",
+   "id": "87d98c7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "transactions['mcc_cd'] = transactions['mcc_cd'].fillna(-2)\n",
     "transactions['txn_city'] = transactions['txn_city'].fillna('<UNK>')\n",
     "transactions['tsp_name'] = transactions['tsp_name'].fillna('<UNK>')\n",
-    "transactions['txn_comment_2'] = transactions['txn_comment_2'].fillna('<UNK>')"
+    "transactions['txn_comment_2'] = transactions['txn_comment_2'].fillna('<UNK>')\n",
+    "\n",
+    "balance['crncy_cd'] = balance['crncy_cd'].fillna(-2)\n",
+    "balance['prod_cat_name'] = balance['prod_cat_name'].fillna('<UNK>')\n",
+    "balance['prod_group_name'] = balance['prod_group_name'].fillna('<UNK>')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4015d4aa",
+   "id": "2e3b8594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,6 +426,18 @@
     "    return data['client_id'].map(df.groupby('client_id')[col_name].agg(lambda x: scipy.stats.mode(x)[0][0])).fillna(fill_na_value)\n",
     "\n",
     "\n",
+    "def get_feature_mean(df, col_name, fill_na_value):\n",
+    "    return data['client_id'].map(df.groupby('client_id')[col_name].mean()).fillna(fill_na_value)\n",
+    "\n",
+    "\n",
+    "def get_feature_std(df, col_name, fill_na_value):\n",
+    "    return data['client_id'].map(df.groupby('client_id')[col_name].std()).fillna(fill_na_value)\n",
+    "\n",
+    "\n",
+    "def get_feature_max_min(df, col_name, fill_na_value):\n",
+    "    return data['client_id'].map(df.groupby('client_id')[col_name].agg(lambda x: x.max() - x.min())).fillna(fill_na_value)\n",
+    "\n",
+    "\n",
     "def create_features_transactions(data):\n",
     "    \n",
     "    data = data.copy()\n",
@@ -431,8 +447,8 @@
     "    data['total_cards'] = get_feature_total(transactions, 'card_id')\n",
     "\n",
     "#     data['total_transaction_amount'] = data['client_id'].map(transactions.groupby('client_id')['tran_amt_rur'].sum()).fillna(0) # add monthly, daily, etc\n",
-    "    data['mean_transaction_amt'] = data['client_id'].map(transactions.groupby('client_id')['tran_amt_rur'].mean()).fillna(-1) # add monthly, daily, etc\n",
-    "    data['std_transaction_amount'] = data['client_id'].map(transactions.groupby('client_id')['tran_amt_rur'].std()).fillna(-1) # add monthly, daily, etc\n",
+    "    data['mean_transaction_amt'] = get_feature_mean(transactions, 'tran_amt_rur', -1) # add monthly, daily, etc\n",
+    "    data['std_transaction_amount'] = get_feature_std(transactions, 'tran_amt_rur', -1) # add monthly, daily, etc\n",
     "    \n",
     "    data['total_mcc_cd'] = get_feature_total(transactions, 'mcc_cd')\n",
     "    data['total_share_mcc_cd'] = (data['total_mcc_cd'] / data['total_transactions']).fillna(0)\n",
@@ -467,11 +483,49 @@
     "    data['total_product_code'] = get_feature_total(assets_under_management, 'product_code')\n",
     "    data['most_common_product_code'] = get_feature_most_common(assets_under_management, 'product_code', '<unknown>').value_counts()\n",
     "    \n",
-    "    data['mean_balance_rur_amt'] = data['client_id'].map(assets_under_management.groupby('client_id')['balance_rur_amt'].mean()).fillna(-1)\n",
-    "    data['std_balance_rur_amt'] = data['client_id'].map(assets_under_management.groupby('client_id')['balance_rur_amt'].mean()).fillna(-1)\n",
+    "    data['mean_balance_rur_amt'] = get_feature_mean(assets_under_management, 'balance_rur_amt', -1)\n",
+    "    data['std_balance_rur_amt'] = get_feature_std(assets_under_management, 'balance_rur_amt', -1)\n",
+    "    data['max_min_balance_rur_amt'] = get_feature_max_min(assets_under_management, 'balance_rur_amt', -1)\n",
     "    \n",
     "    return data\n",
+    "\n",
+    "def create_features_balance(data):\n",
+    "    data = data.copy()\n",
     "    \n",
+    "    data['total_balance'] = data['client_id'].map(balance.groupby('client_id').size()).fillna(0)\n",
+    "    \n",
+    "    data['total_crncy_cd'] = get_feature_total(balance, 'crncy_cd')\n",
+    "    data['most_common_crncy_cd'] = get_feature_most_common(balance, 'crncy_cd', -1)\n",
+    "    \n",
+    "    data['total_eop_bal_sum_rur'] = get_feature_total(balance, 'eop_bal_sum_rur')\n",
+    "    data['total_share_eop_bal_sum_rur'] = (data['total_eop_bal_sum_rur'] / data['total_balance']).fillna(0)\n",
+    "    data['mean_eop_bal_sum_rur'] = get_feature_mean(balance, 'eop_bal_sum_rur', -9999)\n",
+    "    data['std_eop_bal_sum_rur'] = get_feature_std(balance, 'eop_bal_sum_rur', -9999)\n",
+    "    \n",
+    "    data['total_min_bal_sum_rur'] = get_feature_total(balance, 'min_bal_sum_rur')\n",
+    "    data['total_share_min_bal_sum_rur'] = (data['total_min_bal_sum_rur'] / data['total_balance']).fillna(0)\n",
+    "    data['mean_min_bal_sum_rur'] = get_feature_mean(balance, 'min_bal_sum_rur', -9999)\n",
+    "    data['std_min_bal_sum_rur'] = get_feature_std(balance, 'min_bal_sum_rur', -9999)\n",
+    "    \n",
+    "    data['total_max_bal_sum_rur'] = get_feature_total(balance, 'max_bal_sum_rur')\n",
+    "    data['total_share_max_bal_sum_rur'] = (data['total_max_bal_sum_rur'] / data['total_balance']).fillna(0)\n",
+    "    data['mean_max_bal_sum_rur'] = get_feature_mean(balance, 'max_bal_sum_rur', -9999)\n",
+    "    data['std_max_bal_sum_rur'] = get_feature_std(balance, 'max_bal_sum_rur', -9999)\n",
+    "    \n",
+    "    data['total_avg_bal_sum_rur'] = get_feature_total(balance, 'avg_bal_sum_rur')\n",
+    "    data['total_share_avg_bal_sum_rur'] = (data['total_avg_bal_sum_rur'] / data['total_balance']).fillna(0)\n",
+    "    data['mean_avg_bal_sum_rur'] = get_feature_mean(balance, 'avg_bal_sum_rur', -9999)\n",
+    "    data['std_avg_bal_sum_rur'] = get_feature_std(balance, 'avg_bal_sum_rur', -9999)\n",
+    "    data['max_min_avg_bal_sum_rur'] = get_feature_max_min(balance, 'avg_bal_sum_rur', -9999)\n",
+    "    \n",
+    "    data['total_prod_cat_name'] = get_feature_total(balance, 'prod_cat_name')\n",
+    "    data['most_common_prod_cat_name'] = get_feature_most_common(balance, 'prod_cat_name', '<unknown>')\n",
+    "    \n",
+    "    data['total_prod_group_name'] = get_feature_total(balance, 'prod_group_name')\n",
+    "    data['most_common_prod_group_name'] = get_feature_most_common(balance, 'prod_group_name', '<unknown>')\n",
+    "    \n",
+    "    return data\n",
+    "\n",
     "\n",
     "def create_features_payments(data):\n",
     "    data = data.copy()\n",
@@ -494,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "772d316a",
+   "id": "a133d2eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "b79f777b",
+   "id": "594ad77e",
    "metadata": {},
    "outputs": [
     {
@@ -523,14 +577,15 @@
     "# create features\n",
     "\n",
     "data = create_features_transactions(data)\n",
-    "data = create_features_payments(data)\n",
-    "data = create_features_aum(data)"
+    "data = create_features_aum(data)\n",
+    "data = create_features_balance(data)\n",
+    "data = create_features_payments(data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "33cfcecc",
+   "id": "d3fc0548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "fec8e27d",
+   "id": "ae21df03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "849224af",
+   "id": "0cfe38bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93dfa941",
+   "id": "dd148a1c",
    "metadata": {},
    "source": [
     "## Train"
@@ -575,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "b54f4022",
+   "id": "af34201f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "82efc986",
+   "id": "292aaa8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "74469aa6",
+   "id": "3b0b23e2",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "14e11ad9",
+   "id": "0323638c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "fc7796b8",
+   "id": "02f46dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "d2bc52dd",
+   "id": "6bc70bab",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "a3ed438f",
+   "id": "d32c1704",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "b83c17e7",
+   "id": "9724b3f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6ce359e4",
+   "id": "07e768c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e4916cc0",
+   "id": "bf463316",
    "metadata": {},
    "outputs": [],
    "source": [
